# echos_rl

./: .coderabbit.yaml  .gitignore  BUILD_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FOV_IMPROVEMENTS_SUMMARY.md  GAME.md  Makefile  OpenCode.md  README.md  build.rs  build.sh  build_rust.rs  index.html  rustc-ice-2025-06-03T23_48_31-90508.txt  rustfmt.toml  setup.sh  test_debug_macro.rs
.cargo/: config.toml  config.toml.backup
.cursor/rules/: ReviewGateV2.mdc  bevy-development.mdc  debug.mdc  develop-mcp-server.mdc  implement.mdc  lessons-learned.mdc  memory.mdc  plan.mdc  rules.mdc  rust-best-practices.mdc  save.mdc  task.mdc
.github/workflows/: ci.yml  release.yaml
.taskmaster/docs/: prd.txt
assets/: entities.assets.ron  entities.ron  textures.ron
assets/entities/: player.definition.ron
assets/entities/enemies/: basic_enemy.definition.ron  berserker.definition.ron  hostile_guard.definition.ron  neutral_wanderer.definition.ron  passive_critter.definition.ron  whale.ron
assets/settings/: app_settings.toml  debug_config.toml
brtk/: .gitignore  Cargo.toml
brtk/src/: brtk_plugin.rs  lib.rs
brtk/src/direction/: direction.rs  direction_iter.rs
brtk/src/grid/: grid.rs  mod.rs
brtk/src/random/: dice.rs  random.rs
brtk/src/resources/: folders.rs
brtk/src/systems/: init_resource.rs  mod.rs  remove_resource.rs
crates/brtk/: Cargo.toml
crates/brtk/src/: brtk_plugin.rs  lib.rs
crates/brtk/src/direction/: directions.rs  mod.rs
crates/brtk/src/distance/: distance.rs  mod.rs
crates/brtk/src/fov/: mod.rs  traits.rs
crates/brtk/src/fov/algorithms/: mod.rs  quadrant.rs  row.rs  shadowcast.rs
crates/brtk/src/fov/implementations/: map_provider.rs  mod.rs  visibility_map.rs
crates/brtk/src/fov/utils/: distance.rs  mod.rs  slope.rs
crates/brtk/src/grid/: grid.rs  mod.rs  point_iter_row_major.rs
crates/brtk/src/grid_shapes/: circle.rs  line.rs  rectangle.rs  shape.rs
crates/brtk/src/grid_shapes/iter/: rect_iter.rs
crates/brtk/src/pathfinding/: astar.rs  mod.rs  path_cache.rs  pathing_traits.rs  pathing_utils.rs
crates/brtk/src/random/: mod.rs  random.rs
crates/brtk/src/systems/: set_window_icon.rs
crates/echos_assets/: Cargo.toml
crates/echos_assets/src/: lib.rs
docs/: architecture.md  debug_system.md  enhanced_architecture_implementation.md  fov_system.md  loading_state_restoration.md  pathfinding.md  product_requirement_docs.md  technical.md
plans/: NEXT_STEPS.md
src/: app.rs  app_constants.rs  app_settings.rs  dev.rs  dev_tools.rs  lib.rs  log.rs  main.rs  prelude.rs  utils.rs
src/assets/entities/: components.rs  loader.rs  mod.rs  spawner.rs
src/controller/: mod.rs
src/controller/systems/: camera.rs  fov.rs  keyboard_input.rs  mod.rs  process.rs  spawn_entities.rs  spawn_map.rs
src/core/: bundles.rs  components.rs  constants.rs  events.rs  mod.rs  pathfinding.rs  resources.rs  states.rs  systems.rs
src/core/actions/: attack.rs  mod.rs  swipe_attack.rs  teleport.rs  wait.rs  walk.rs
src/core/commands/: spawn_entity.rs
src/core/components/: health.rs  inventory.rs  light.rs  mod.rs  position.rs  stats.rs  tag.rs
src/core/pathfinding/: astar.rs  dijkstra.rs  mod.rs  path_cache.rs
src/core/resources/: current_map.rs  distance_settings.rs  fov_map.rs  light_map.rs  map.rs  mod.rs  spawn_point.rs  turn_queue.rs
src/core/systems/: combat.rs  fov.rs  light.rs  mod.rs
src/core/types/: action.rs  error.rs  mod.rs
src/debug/: categories.rs  config.rs  file_logger.rs  macros.rs  mod.rs  systems.rs
src/dev/: dev_plugin.rs  mod.rs
src/examples/: map_usage.rs  mod.rs
src/gameplay/: map.rs  mod.rs
src/gameplay/enemies/: ai.rs  components.rs  enhanced_spawning.rs  helpers.rs  mod.rs  pathfinding.rs  pathfinding_demo.rs  systems.rs
src/gameplay/map/: gamemap.rs  mod.rs  procgen.rs  tile.rs  utils.rs
src/gameplay/player/: actions.rs  components.rs  events.rs  mod.rs  systems.rs
src/gameplay/turns/: components.rs  mod.rs  resources.rs  systems.rs  turn_manager.rs  turn_processor.rs
src/gameplay/world/: components.rs  generation.rs  mod.rs  spawning.rs  systems.rs
src/model/: mod.rs  model_constants.rs  model_plugin.rs
src/model/actions/: wait.rs  walk.rs
src/model/ai/: ai_spawner.rs  mod.rs
src/model/assets/: mod.rs
src/model/commands/: mod.rs  spawn_entity.rs
src/model/components/: actor.rs  ai_behavior.rs  description.rs  fov.rs  input.rs  mod.rs  position.rs  renderable.rs  terrain_type.rs  turn.rs
src/model/entities/: components.rs  definition.rs  loader.rs  mod.rs  spawner.rs
src/model/generation/: __procgen.rs  dungeon_generator.rs  gen_config.rs  mod.rs  room.rs
src/model/resources/: current_map.rs  fov_map.rs  gamemap.rs  map.rs  mod.rs  spawn_point.rs  turn_queue.rs
src/model/systems/: actor_movement.rs  camera.rs  fov.rs  fov_system.rs  mod.rs  process.rs  spawn_map.rs  spawn_player.rs  spawner.rs
src/model/types/: action.rs  direction.rs  mod.rs
src/model/utils/: mod.rs  tilemap.rs
src/rendering/: components.rs  constants.rs  mod.rs  resources.rs  screens.rs  systems.rs
src/rendering/screens/: gameplay.rs  loading.rs  mod.rs
src/rendering/systems/: camera.rs  mod.rs  sprite.rs  tilemap.rs  visibility.rs
src/screens/: gameplay.rs  loading.rs  mod.rs
src/theme/: interaction.rs  mod.rs  widget.rs
src/ui/: mod.rs  ui_constants.rs  ui_plugin.rs
src/ui/components/: interaction.rs  mod.rs
src/ui/systems/: apply_interaction.rs  mod.rs  spawn_camera.rs
src/ui/utils/: mod.rs  widgets.rs
src/utils/: macros.rs  mod.rs  tilemap.rs
src/utils/macros/: mod.rs  spawn.rs
src/view/: mod.rs  view_constants.rs  view_plugin.rs
src/view/components/: mod.rs  tile_sprite.rs
src/view/resources/: mod.rs  texture_assets.rs  textures.rs  tilemap.rs
src/view/screens/: gameplay.rs  loading.rs  mod.rs
src/view/systems/: add_sprite_to_player.rs  mod.rs  position_to_transform.rs  (+2 more)
tasks/: active_context.md  tasks_plan.md
tests/: test_combat_system.rs  test_core_components.rs  test_debug_macro.rs  test_fov_enhancements.rs  test_lighting_integration.rs  test_pathfinding_rwlock.rs
(+29 files in other folders)
